# mesh2splat

./: .gitignore  CMakeLists.txt  Converter.vcxproj  LICENSE.txt  NOTICE.txt  README.md  example_charts00.tga  example_tris00.tga  icosphere.glb  imgui.ini  main.cpp  parsers.cpp  parsers.hpp  run_debug_build.bat
katana/: katana.fbx  license.txt
scripts/: show_conversion_stats.py
src/: gaussianComputations.cpp  gaussianComputations.hpp  inspect_ply.py  main.cpp  parsers.cpp  parsers.hpp
src/glewGlfwHandlers/: glewGlfwHandler.cpp  glewGlfwHandler.hpp
src/imGuiUi/: ImGuiUI.cpp  ImGuiUi.hpp
src/implementationFiles/: stb_image_impl.cpp  stb_image_resize_impl.cpp  stb_image_write_impl.cpp  tiny_gltf_impl.cpp
src/parsers/: parsers.cpp  parsers.hpp
src/renderer/: IoHandler.cpp  IoHandler.hpp  RenderPasses.hpp  event.hpp  guiRendererConcreteMediator.cpp  guiRendererConcreteMediator.hpp  mediator.hpp  mesh2SplatHandler.hpp  mesh2splatHandler.cpp  renderer.cpp  renderer.hpp
src/renderer/renderPasses/: ConversionPass.cpp  ConversionPass.hpp  DepthPrepass.cpp  DepthPrepass.hpp  GaussianRelightingPass.cpp  GaussianRelightingPass.hpp  GaussianShadowPass.cpp  GaussianShadowPass.hpp  GaussianSplattingPass.cpp  GaussianSplattingPass.hpp  GaussiansPrepass.cpp  GaussiansPrepass.hpp  MeshRenderPass.cpp  MeshRenderPass.hpp  RadixSortPass.cpp  RadixSortPass.hpp  RenderContext.hpp  RenderPass.hpp
src/shaders/: eigendecomposition.glsl  fragment_shader.glsl  geom_shader.glsl  tess_control.glsl  tess_control.tesc  tess_evaluation.glsl  tess_evaluation.tese  vertex_shader.glsl  vertex_shader.vert
src/shaders/conversion/: converterFS.glsl  converterGS.glsl  converterVS.glsl  fragment_shader.glsl  geom_shader.glsl  tess_control.glsl  tess_evaluation.glsl  vertex_shader.glsl
src/shaders/rendering/: common.glsl  depthPrepassPS.glsl  depthPrepassVS.glsl  frameBufferReaderCS.glsl  gaussianPointLightCubeMapShadowPS.glsl  gaussianPointLightCubeMapShadowVS.glsl  gaussianPointShadowMappingCS.glsl  gaussianSplattingDeferredPS.glsl  gaussianSplattingDeferredVS.glsl  gaussianSplattingPS.glsl  gaussianSplattingPrepassCS.glsl  gaussianSplattingVS.glsl  meshRenderPS.glsl  (+3 more)
src/utils/: Camera.cpp  Camera.hpp  SceneManager.cpp  SceneManager.hpp  ShaderRegistry.cpp  ShaderRegistry.hpp  argparser.cpp  argparser.hpp  gaussianShapesUtilities.cpp  gaussianShapesUtilities.hpp  glUtils.cpp  glUtils.hpp  normalizedUvUnwrapping.cpp  normalizedUvUnwrapping.hpp  params.hpp  shaderUtils.cpp  shaderUtils.hpp  utils.cpp  utils.hpp
tools/: gltf_audit.py
triangle/: triangle.c
(+4 files in other folders)
